--- a/package.json
+++ b/package.json
@@ -2,18 +2,39 @@
   "private": true,
   "scripts": {
     "prod": "gulp --production",
-    "dev": "gulp watch"
+    "dev": "gulp watch",
+    "build-dev": "webpack --env.WEBPACK_ENV dev --mode=development --progress --colors --watch"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "bootstrap-sass": "3.3.7",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "gulp": "3.9.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "laravel-elixir": "6.0.0-18",
+    "laravel-elixir-vue-2": "0.2.0",
+    "laravel-elixir-webpack-official": "1.0.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "vue-loader": "^14.2.3",
+    "vue-resource": "1.5.1",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.12.1",
+    "webpack-cli": "^2.1.5"
+  },
+  "dependencies": {
+    "axios": "0.18.0",
+    "vue": "^2.5.17",
+    "vue-loader": "15.2.6",
     "bootstrap-sass": "^3.3.7",
-    "gulp": "^3.9.1",
     "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-9",
-    "laravel-elixir-vue": "^0.1.4",
-    "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.14.0",
     "video.js": "^5.11.9",
-    "vue": "^1.0.26",
-    "vue-resource": "^0.9.3"
+    "vue-resource": "1.5.1"
   }
 }
