--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
   },
   "dependencies": {
     "axios": "0.18.0",
-    "vue": "^2.5.17",
-    "vue-loader": "15.2.6",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.1.0",
     "lodash": "^4.14.0",
     "video.js": "^5.11.9",
-    "vue-resource": "1.5.1"
+    "vue": "^2.5.17",
+    "vue-loader": "15.2.6",
+    "vue-resource": "1.5.1",
+    "vue2-filters": "^0.3.0"
   }
 }
